Added bitly link to slides.

--- a/2019-04-25-DerbyPy-DocumentingPythonPackages/DocumentingPythonPackages.html
+++ b/2019-04-25-DerbyPy-DocumentingPythonPackages/DocumentingPythonPackages.html
@@ -34,6 +34,8 @@ class: center, middle, inverse, title-slide
 * &lt;i class="fa fa-instagram"&gt;&lt;/i&gt;: [instagram.com/andreysmelter](https://www.instagram.com/andreysmelter/)
 * &lt;i class="fa fa-twitter"&gt;&lt;/i&gt;: [twitter.com/smelandr](https://twitter.com/smelandr)
 
+### Slides are available: [bit.ly/DerbyPyWTD](http://bit.ly/DerbyPyWTD)
+
 
 ---
 background-image: url(resources/pics/WriteTheDocs.jpg)
@@ -64,7 +66,7 @@ class: inverse, center, middle
 
 &lt;div class="my-footer"&gt;
     &lt;span&gt;
-        &lt;a href=""&gt;
+        &lt;a href="http://bit.ly/DerbyPyWTD"&gt;
             [Ref]: Click me!
         &lt;/a&gt;
     &lt;/span&gt;
