--- a/2019-04-25-DerbyPy-DocumentingPythonPackages/DocumentingPythonPackages.html
+++ b/2019-04-25-DerbyPy-DocumentingPythonPackages/DocumentingPythonPackages.html
@@ -34,7 +34,8 @@ class: center, middle, inverse, title-slide
 * &lt;i class="fa fa-instagram"&gt;&lt;/i&gt;: [instagram.com/andreysmelter](https://www.instagram.com/andreysmelter/)
 * &lt;i class="fa fa-twitter"&gt;&lt;/i&gt;: [twitter.com/smelandr](https://twitter.com/smelandr)
 
-### Slides are available: [bit.ly/DerbyPyWTD](http://bit.ly/DerbyPyWTD)
+#### Slides are available: [bit.ly/DerbyPyWTD](http://bit.ly/DerbyPyWTD)
+#### Slides are available (short): [bit.ly/DerbyPyWTDShort](http://bit.ly/DerbyPyWTDShort)
 
 
 ---
@@ -246,16 +247,16 @@ FILE
 
 
 ```python
-"""
-This module contains routines for finding 
-roots of quadratic equations.
-"""
+*"""
+*This module contains routines for finding
+*roots of quadratic equations.
+*"""
 
 import cmath
 
 
 def quadratic(a, b, c):
-    """Solve quadratic equation."""
+*   """Solve quadratic equation."""
     discriminant = cmath.sqrt(b**2.0 - 4.0 * a * c)
     x1 = (-b + discriminant) / (2.0 * a)
     x2 = (-b - discriminant) / (2.0 * a)
@@ -1449,7 +1450,7 @@ class: inverse
 &lt;font color="green"&gt;$ mkdocs serve&lt;/font&gt;
 INFO    -  Building documentation... 
 INFO    -  Cleaning site directory 
-[I 190425 02:27:22 server:298] Serving on http://127.0.0.1:8000
+[I 190425 02:27:22 server:298] Serving on &lt;font color="yellow"&gt;http://127.0.0.1:8000&lt;/font&gt;
 [I 190425 02:27:22 handlers:59] Start watching changes
 [I 190425 02:27:22 handlers:61] Start detecting changes
 &lt;/pre&gt;
