Add conclusion slide.

--- a/2019-04-25-DerbyPy-DocumentingPythonPackages/DocumentingPythonPackages.html
+++ b/2019-04-25-DerbyPy-DocumentingPythonPackages/DocumentingPythonPackages.html
@@ -1497,7 +1497,18 @@ INFO    -  Cleaning site directory
 ---
 # Conclusion: \#&lt;font color="green"&gt;write&lt;/font&gt;the&lt;font color="green"&gt;docs&lt;/font&gt;
 
+### It &lt;font color="green"&gt;teaches&lt;/font&gt; you about your own code.
+### It puts you in the shoes of software &lt;font color="green"&gt;users&lt;/font&gt;.
+### It forces you to create &lt;font color="green"&gt;high-quality examples&lt;/font&gt;.
+### It forces you to think about &lt;font color="green"&gt;better API design&lt;/font&gt; for your software.
+
+
+---
+# Conclusion: \#&lt;font color="green"&gt;write&lt;/font&gt;the&lt;font color="green"&gt;docs&lt;/font&gt;
+
 ![](resources/pics/EricHolscherSphinxTweet.png)
+
+* It &lt;font color="green"&gt;**fits**&lt;/font&gt; so nicely into &lt;font color="green"&gt;**development workflow**&lt;/font&gt; that people forget about it.
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
